    - proper support for ‘-l FILENAME’ / ‘--infile FILENAME’
  - dropped support for ‘gnugo-program’ of form "PROGRAM OPTIONS..."
  - dropped command: ‘t’ (gnugo-toggle-dead-group)
  - changes to ‘gnugo-xpms’
    - now a normal var, and not a feature
    - value can be a function to compute XPMs
  - ‘gnugo-image-display-mode’ replaces ‘gnugo-toggle-image-display-command’
  - PASS for SZ <= 19 normalized to "" on read, written as ""
  - ‘=’ also displays move number of the stone (if any) at that position
  - ‘C-u F’ adds the (abbreviated) blurb as a comment to the last node
  - new keybinding for ‘gnugo-undo-one-move’: M-u
  - you can play a move for GNU Go, e.g., after ‘M-u’
  - ‘gnugo-undo-one-move’ can optionally arrange for you to play next
  - new command: ‘S’ (gnugo-request-suggestion)
  - new command: ‘C’ (gnugo-comment)
  - new command: ‘o’ (gnugo-oops)
  - new command: ‘O’ (gnugo-okay)
  - new command: ‘L’ (gnugo-frolic-in-the-leaves)
  - new command: ‘C-c C-a’ (gnugo-assist-mode)
  - new command: ‘C-c C-z’ (gnugo-zombie-mode)
  - new var: gnugo-undo-reaction
  - new major mode: GNUGO Frolic (gnugo-frolic-mode)
  - GNUGO Board mode now derived from Special mode
  - position arg validated for direct GTP commands ‘undo’, ‘gg-undo’
  - undo commands no longer signal error on overkill
  - SGF I/O commands change ‘default-directory’
  - performance improvements
  - of interest to hackers (see source, BI => backward incompatible)
    - dropped var: ‘gnugo-inhibit-refresh’ (BI)
    - ‘gnugo/sgf-read-file’ renamed to ‘gnugo/sgf-create’ and enhanced
    - ‘:sgf-gametree’ internal representation inverted (BI)
    - ‘gnugo-magic-undo’ internalized
    - new func: ‘gnugo-current-player’
    - new hook: ‘gnugo-start-game-hook’
    - ‘gnugo-board-mode-hook’ now unsuitable for prop munging (BI)
    - changes to ‘gnugo-move-history’
      - dropped ‘(gnugo-move-history 'count)’ (BI)
      - returns last two moves w/ RSEL ‘two’